k8s/07-backend.yaml
# k8s/07-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: warely
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: warely-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: warely
  labels:
    app: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
